# Bridge

./: .dockerignore  .gitattributes  .gitignore  DECISIONS.md  Dockerfile  LICENSE  README.md  THREAT_MODEL.md  config.example.yaml  config.gemma.example.yaml  config.gemma.laptop.yaml  config.replay.example.yaml  config.replay.hardware.yaml  docker-compose.yml  hardware_runbook.md  provision_checklist.md  pyproject.toml  shortlist.example.yaml
.claude/: launch.json
.github/workflows/: ci.yml
bridge/: __init__.py  __main__.py  cli.py  config.py  run_state.py  setup_wizard.py  shortlist.py
bridge/agent/: __init__.py  context.py  orchestrator.py  stages.py
bridge/dashboard/: __init__.py  app.py
bridge/dashboard/static/: index.html
bridge/executor/: __init__.py  base.py  local.py  mock.py  scenario.py  ssh.py
bridge/llm/: __init__.py  base.py  extract.py  openai_client.py  recorder.py  replay.py
bridge/parser/: __init__.py  model.py  parser.py
bridge/patcher/: __init__.py  apply.py  policy.py
demo/: index.html
docker/: entrypoint.sh
fixtures/cassettes/: gemma.live.json  hardware.json  success.json
fixtures/logs/: build_cmake_no_cuda.txt  build_err_arch_flag.txt  build_err_cmake_cuda_lang.txt  build_err_cmake_nvcc_toolkit.txt  build_err_hw_linklang_ansi.txt  build_err_hw_nvcc_ansi.txt  build_err_injection.txt  build_err_kernel_launch_syntax.txt  build_err_link_hipblas.txt  build_err_lld_undefined_main.txt  build_err_missing_cublas_header.txt  build_err_no_matching_function.txt  build_err_undeclared_cublas.txt  build_ok.txt  build_ok_hw.txt  hipify_poisoned.txt  hipify_run.txt  test_all_pass.txt  test_partial_60.txt  test_partial_80.txt  test_pass_hw.txt  test_stuck_tolerance.txt
fixtures/repos/hardware/: CMakeLists.txt
fixtures/repos/hardware/src/: saxpy.cu
fixtures/repos/poisoned/src/: attention.cpp
fixtures/repos/success/: CMakeLists.txt
fixtures/repos/success/src/: gemm.cpp  gemm.hpp  saxpy.cpp  spmv.cpp  warp_reduce.cpp
fixtures/scenarios/: hardware.yaml  partial.yaml  poisoned.yaml  stuck_build.yaml  success.yaml
pitch/: bridge_pitch.pptx  build_deck.js  deck_delta.md  package-lock.json  video_script.md
prompts/: diagnose.md  propose_edit.md
scripts/: serve_vllm_rocm.sh
tests/: conftest.py  test_cli_init_demo.py  test_cli_run.py  test_config.py  test_context.py  test_dashboard.py  test_executor_mock.py  test_hardware_day_regressions.py  test_llm_backends.py  test_llm_extract.py  test_local_kind.py  test_orchestrator.py  test_parser.py  test_patcher.py  test_prompt_arch.py  test_run_state.py  test_scenario.py  test_security_fixture.py  test_shortlist.py
